# conclusive-in-cpp-arunjoy128

./: AlertInEmail.cpp  AlertInEmail.h  CMakeLists.txt  Temperature_Alerter_checker.h  alert_checker.cpp  alert_function.h  alert_target.h  alert_to_controller.cpp  alert_to_controller.h  battery_character.h  breach_detector.cpp  breach_detector.h  breach_type.h  cooling_config.h  cooling_limits.h  typewise-alert.tests.cpp
.github/workflows/: check-complete.sh  completion.yml  limit-size.yml  main.yml  no-dups.yml
